# pocowl

./: .gdb_history  .gitmodules  Cargo.toml  flake.nix
crates/backend/: Cargo.toml
crates/backend-glfw/: Cargo.toml
crates/backend-glfw/src/: lib.rs
crates/backend/src/: lib.rs
crates/pocowl/: Cargo.toml
crates/pocowl/src/: main.rs  protocols.rs
crates/pocowl/src/protocols/: mod.rs  wayland.rs  xdg_shell.rs
crates/protocols/: Cargo.toml
crates/protocols-base/: Cargo.toml
crates/protocols-base/src/: lib.rs
crates/protocols/src/: lib.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs
crates/wlbuffer/: Cargo.toml
crates/wlbuffer/src/: lib.rs
crates/wlclient/: Cargo.toml
crates/wlclient/src/: lib.rs
crates/wlmessage/: Cargo.toml
crates/wlmessage/src/: lib.rs
crates/wlsocket/: Cargo.toml
crates/wlsocket/src/: lib.rs  value.rs
crates/wlstream/: Cargo.toml
crates/wlstream/src/: lib.rs
crates/wlvalue/: Cargo.toml
crates/wlvalue/src/: lib.rs
