[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Po Co<me@polnio.dev>"]

[workspace.dependencies]
pocowl-protocols      = { path = "crates/protocols" }
pocowl-protocols-base = { path = "crates/protocols-base" }
pocowl-scanner        = { path = "crates/scanner" }
pocowl-wlclient       = { path = "crates/wlclient" }
pocowl-wlmessage      = { path = "crates/wlmessage" }
pocowl-wlsocket       = { path = "crates/wlsocket" }
pocowl-wlvalue        = { path = "crates/wlvalue" }
