[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Po Co<me@polnio.dev>"]

[workspace.dependencies]
pocowl-backend        = { path = "crates/backend" }
pocowl-backend-glfw   = { path = "crates/backend-glfw" }
pocowl-protocols      = { path = "crates/protocols" }
pocowl-protocols-base = { path = "crates/protocols-base" }
pocowl-scanner        = { path = "crates/scanner" }
pocowl-wlbuffer       = { path = "crates/wlbuffer" }
pocowl-wlclient       = { path = "crates/wlclient" }
pocowl-wlmessage      = { path = "crates/wlmessage" }
pocowl-wlsocket       = { path = "crates/wlsocket" }
pocowl-wlstream       = { path = "crates/wlstream" }
pocowl-wlvalue        = { path = "crates/wlvalue" }
