[package]
name = "pocowl"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
pocowl-scanner.workspace = true
pocowl-wlclient.workspace = true
pocowl-wlsocket.workspace = true
pocowl-wlmessage.workspace = true
pocowl-protocols.workspace = true

anyhow = "1.0.102"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
byteorder = "1.5.0"
tokio-util = "0.7.18"
