[package]
name = "pocowl"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
pocowl-backend-glfw.workspace = true
pocowl-backend.workspace = true
pocowl-protocols.workspace = true
pocowl-wlbuffer.workspace = true
pocowl-wlclient.workspace = true
pocowl-wlsocket.workspace = true

anyhow = "1.0.102"
memmap = "0.7.0"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
tokio-util = "0.7.18"
crossbeam = "0.8.4"
