[package]
name = "pocowl-protocols"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
pocowl-protocols-base.workspace = true
pocowl-wlclient.workspace = true
pocowl-scanner.workspace = true
pocowl-wlmessage.workspace = true
pocowl-wlvalue.workspace = true

fixed = "1.31.0"
anyhow = "1.0.102"
