[package]
name = "pocowl-scanner"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = "0.11.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
syn = "2.0.117"
